fixed issue with li going out of container div by removing passing-right property added word-wrap:break-word to allow long words to wrap inside of li

--- a/scripts/styles.css
+++ b/scripts/styles.css
@@ -36,7 +36,7 @@ li {
 	box-shadow: 3px 3px 2px #888888;
 	padding-left: 5px;
 	padding-bottom: 1px;
-	padding-right:10px;
+	word-wrap:break-word;
 }
 
 #container {
